--- a/sass/components/_body2.scss
+++ b/sass/components/_body2.scss
@@ -4,10 +4,3 @@
   border-bottom: 300px solid $black;
   border-left: 1900px solid transparent;
 }
-
-.body2 {
-  height: 700px;
-  background-color: $green;
-  border-bottom: 300px solid $black;
-  border-left: 1900px solid transparent;
-}
