--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,14 +1,13 @@
 #contactform {
   width: 500px;
   border: 5px solid #fff;
-}
-
-#contactform {
   padding: 1em;
+  max-width: 100%;
 
   textarea {
     padding: .4em;
-    width: 400px;
+    width: 100%;
+    max-width: 400px;
     resize: vertical;
     margin: 0;
   }
