--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -5,8 +5,13 @@
 }
 
 html {
+  -webkit-tap-highlight-color: transparent;
+  -webkit-font-smoothing: antialiased;
+  -webkit-overflow-scrolling: touch;
   font-size: 62.5%;
+  width: 100vw;
   font-family: "Lato", sans-serif;
+  overflow-x: hidden;
 }
 
 body {
